# pixie-power

./: .gitignore  package-lock.json  package.json
app/: globals.css  layout.tsx  page.module.css  page.tsx
app/about/: about.module.css  page.tsx
app/snake/: page.tsx  snake.module.css  use-wasm.tsx
app/word-search/: page.tsx  word-search.module.css
app/word-search/components/: word-search.tsx
app/word-search/game/: constants.ts  create-word-search.ts  get-open-directions.ts
wasm/rust/: Cargo.toml
wasm/rust/src/: main.rs
wasm/rust/src/domains/: mod.rs
wasm/rust/src/domains/bevy/services/: close_app.rs  start_app.rs
wasm/rust/src/domains/game/: events.rs  mod.rs
wasm/rust/src/domains/game/domain_objects/: collidable.rs  grid_square.rs  mod.rs  movable.rs  pickup.rs  piece.rs  player.rs  snake_game.rs  sprite_with_atlas.rs  wall.rs
wasm/rust/src/domains/game/plugins/: game_plugin.rs  mod.rs  player_plugin.rs  snake_game_plugin.rs
wasm/rust/src/domains/game/services/: mod.rs  (+2 more)
wasm/rust/src/domains/graphics/: mod.rs
wasm/rust/src/domains/menus/: mod.rs
zombie-saga/: Cargo.toml
zombie-saga/src/: main.rs
zombie-saga/src/domains/: mod.rs
zombie-saga/src/domains/bevy/services/: mod.rs  start_app.rs
zombie-saga/src/domains/graphics/: mod.rs
zombie-saga/src/domains/graphics/domain_objects/: framerate_counter.rs
zombie-saga/src/domains/graphics/plugins/: framerate_counter_plugin.rs  graphics_plugin.rs  mod.rs
zombie-saga/src/domains/graphics/resources/: mod.rs
zombie-saga/src/domains/graphics/services/: mod.rs  spawn_framerate_counter.rs
(+18 files in other folders)
