[package]
name = "zombie-saga"
version = "0.0.1"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0" }
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
enum_glob_use = "deny"